--- a/src/components/AlarmList/AlarmList.module.scss
+++ b/src/components/AlarmList/AlarmList.module.scss
@@ -8,6 +8,7 @@
     align-items: center;
     gap: 3px;
     animation: slideIn 0.5s ease-out;
+    z-index: 100;
 }
 
 @keyframes slideIn {
