--- a/src/components/Clock/Clock.module.scss
+++ b/src/components/Clock/Clock.module.scss
@@ -1,6 +1,8 @@
 .clockContent {
     margin-top: 49px;
     cursor: default;
+    position: relative;
+    z-index: 500;
 }
 
 .digitalTime {
